@@ -1,3 +1,5 @@
+2006/8/13 -- released version 20060813_trunk
+
 2006/8/12 -- released version 20060812_trunk
 
 2006/8/11 -- released version 20060811_trunk
